# Local-LLM-Translator

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
PRDs/: Development.md  prd.md  ui.md
e2e/: translation.spec.ts
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: export.rs  files.rs  history.rs  mod.rs  provider.rs  settings.rs  translate.rs
src-tauri/src/services/: document.rs  export.rs  llm.rs  mod.rs
src/adapters/llm/: lmstudio-adapter.ts  openai-compatible-adapter.ts  types.ts
src/app/: AppShell.tsx
src/components/common/: MarkdownContent.tsx
src/components/history/: HistoryDrawer.tsx
src/components/settings/: ProviderConfigForm.tsx
src/components/translator/: InputPanel.tsx  OutputPanel.tsx  StatusBar.tsx  TopToolbar.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  drawer.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx
src/hooks/: useProvider.ts  useTranslation.ts
src/lib/: defaults.ts  errors.test.ts  errors.ts  format.ts  prompt.test.ts  prompt.ts  segment.test.ts  segment.ts  tauri.ts  utils.ts
src/pages/settings/: SettingsPage.tsx
src/pages/translator/: TranslatorPage.tsx
src/schemas/: settings.test.ts  settings.ts
src/services/: document-service.ts  export-service.ts  history-service.ts  provider-service.ts  settings-service.ts  translate-service.ts
src/stores/: ui-store.ts
src/types/: core.ts
