[package]
name = "local-translate"
version = "0.1.0"
description = "Windows local translation app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "local_translate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
pdf-extract = "0.7.9"
zip = "2.6.1"
quick-xml = "0.37.2"
docx-rs = "0.4.17"
anyhow = "1.0.97"
